--- a/form.html
+++ b/form.html
@@ -9,8 +9,8 @@
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="form.html">Form</a>
-        <a href="">GitHub Repo</a>
-        <a href="info.html">About</a>
+        <a href="https://github.com/Kasperlinux/html-miniProject.git">GitHub Repo</a>
+        <a href="https://anthonys.ac.in/">Official Website</a>
       </div>
 
     <CENTER><h2 style="font-family: 'Brush Script MT', cursive;">Student Records</h2></CENTER>
