--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="form.html">Form</a>
-        <a href="">GitHub Repo</a>
+        <a href="https://github.com/Kasperlinux/html-miniProject.git">GitHub Repo</a>
         <a href="https://anthonys.ac.in/">Official Website</a>
       </div>
        
