--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<!-- card back -->
 			<div class="card-side card-back">
 				<button class="btn">
-					Read More
+					Welcome!
 				</button>
 			</div>
 		</div>
