--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
                         <!--Validation Error-->
                         <label class="validation-error hide" id="stdClassvalidationError">This field is required</label>
                        <!--Input Student Class-->
-                        <input type="text" name="stdClass" id="stdClass" placeholder="Enter the Student  Department and Semester">
+                        <input type="text" name="stdClass" id="stdClass" placeholder="Enter the Department and Semester">
                     </div>
                     <!--div-4-->
                     <div>
